css/dc-compare.css
body {
  font-family: serif;
  line-height: 1.6;
  font-size: 18px;
  color: #484848;
  background-color: #F9F9F9;
  transition: all 200ms linear
}
.dark body {
  background-color: #191919;
  color: #ccc;
}
.outer-container {
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
}
.half-container {
  width: 50%;
  float: left;
}
.version-container {
  margin: 10px;
  font-family: sans-serif;
}
.chapter-container {
  clear: left;
  margin: 10px;
  margin-top: 30px;
  font-family: sans-serif;
}
.divider {
  padding-top: .5em;
}
.checkbox-label {
  font-size: 14px;
}
.output {
  margin: 20px 10px;
}
.added {
  background-color: #C4FDB6;
  transition: all, 200ms linear;
}
.dark .added {
  background-color: #384436;
  background-color: #3d424e;
  background-color: transparent;
  color: #34bdb3;
}
.removed {
  background-color: #FDDEB6;
  transition: all, 200ms linear;
}
.dark .removed {
  background-color: #5a4046;
  background-color: transparent;
  color: #da9434;
}
.highlighted {
  background-color: #DDDDDD;
}
.dark .highlighted {
  background-color: #444444;
}
.clear {
  clear: both;
}
.nowrap {
  white-space: nowrap;
}
.cover {
  background: rgba(33, 33, 33, .2);
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
}
.chapter-navigator {
  color: #484848;
  text-decoration: none;
}
.dark .chapter-navigator {
  color: #F9F9F9;
}
.footer {
  font-family: sans-serif;
  padding-top: 10em;
  padding-bottom: 1em;
}
.footer a {
  color: #4b4bb3;
  border-bottom: 3px solid;
  text-decoration: none;
  padding-bottom: 4px;
}
@keyframes pulse {
  0% {
      opacity: 0.5;
      transform: scale(0.75);
  }
  50% {
      opacity: 1;
      transform: scale(1);
  }

  100% {
      opacity: 0.5;
      transform: scale(0.75);
  }
}
.loading {
  position: fixed;
  left: 50%;
  top: 50%;
  width: 30px;
  height: 30px;
  border-radius: 15px;
  background-color: #000;
  animation: pulse 1s infinite;
}
.dark .loading {
  background-color: #ccc;
}
.innitial * {
  transition: none !important;
}

/* SELECT2 */

.select2-container {
  font-family: sans-serif;
  font-size: .8em;
}

.select2-container input {
  background-color: #191919;
  color: #ccc;
}

.dark .select2-container--default .select2-selection--single .select2-selection__rendered {
  color: #ccc;
}

.select2-container--default .select2-selection--single {
  background: #f9f9f9;
}

.dark .select2-container--default .select2-selection--single {
  background: #191919;
}

.dark .select2-dropdown {
  background: #191919;
}

.dark .select2-container--default .select2-results__option[aria-selected=true] {
  background: #393939;
}

.dark .select2-container--default .select2-results__option--highlighted[aria-selected] {
  background-color: #3a3f67;
}

